--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -2,7 +2,11 @@
     display: flex;
     justify-content: center;
     gap: 20px;
+
     @media(max-width: 900px) {
         flex-direction: column;
+        display: flex;
+        padding: 50px;
     }
+
 }
